@@ -31,6 +31,7 @@ Other features
  * Added option to specify a fallback URL on ``{% pageurl %}`` (Arthur Holzner)
  * Add support for more rich text formats, disabled by default: ``blockquote``, ``superscript``, ``subscript``, ``strikethrough``, ``code`` (Md Arifin Ibne Matin)
  * Added ``max_count_per_parent`` option on page models to limit the number of pages of a given type that can be created under one parent page (Wesley van Lee)
+ * ``StreamField`` field blocks now accept a ``validators`` argument (Tom Usher)
 
 
 Bug fixes
